--- a/index.html
+++ b/index.html
@@ -4,106 +4,22 @@
     <base target="_top">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ระบบตรวจตราระวังอัคคีภัย โรงพยาบาลมะเร็งอุบลราชธานี</title>
-    
-    <!-- นำเข้าฟอนต์และไอคอน -->
-    <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GAAD Score with Ai โรงพยาบาลมะเร็งอุบลราชธานี</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
-            overflow: hidden;
-            font-family: 'Sarabun', sans-serif;
-            background-color: #f3f4f6;
+            overflow: hidden; /* ป้องกันการเลื่อนซ้ำซ้อนด้านนอก */
         }
-        
         iframe {
             width: 100%;
-            height: 100%;
+            height: 100vh;
             border: none;
-            display: block; /* แก้บั๊กช่องว่างด้านล่าง */
-        }
-
-        /* Loading Screen Styles */
-        #loader {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #ffffff;
-            z-index: 9999;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            transition: opacity 0.5s ease-out;
-        }
-
-        .spinner {
-            width: 50px;
-            height: 50px;
-            border: 5px solid #e5e7eb;
-            border-top: 5px solid #1e3a8a; /* สีน้ำเงินเข้มตามธีม App */
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin-bottom: 20px;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .loading-text {
-            color: #1e3a8a;
-            font-weight: bold;
-            font-size: 1.1rem;
-            animation: pulse 1.5s infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.5; }
         }
     </style>
 </head>
 <body>
-
-    <!-- ส่วนแสดงผลระหว่างรอโหลด -->
-    <div id="loader">
-        <div class="spinner"></div>
-        <div class="loading-text">กำลังเข้าสู่ระบบตรวจตรา...</div>
-        <div style="font-size: 0.8rem; color: #6b7280; margin-top: 10px;">โรงพยาบาลมะเร็งอุบลราชธานี</div>
-    </div>
-
-    <!-- Iframe สำหรับแสดงผล App -->
-    <!-- เพิ่ม allow attribute เพื่อให้ใช้กล้อง/ตำแหน่งได้สมบูรณ์แม้อยู่ใน iframe -->
-    <iframe 
-        id="appFrame"
-        src="https://script.google.com/macros/s/AKfycbz7UChYuR4PguAO6XC6SLU0nzBfu79qTEQfxNr09bx3bhrut5wmk3fS44ul-5N0Xugx/exec"
-        allow="camera *; microphone *; geolocation *"
-        onload="hideLoader()">
-    </iframe>
-
-    <script>
-        // ฟังก์ชันซ่อนหน้าจอโหลดเมื่อ iframe โหลดเสร็จ
-        function hideLoader() {
-            const loader = document.getElementById('loader');
-            // รอสักนิดเพื่อให้แน่ใจว่า Apps Script Render เสร็จแล้วจริงๆ (Google ชอบ Redirect หลายรอบ)
-            // แต่ iframe onload จะทำงานเมื่อหน้าสุดท้ายโหลดเสร็จ
-            setTimeout(() => {
-                loader.style.opacity = '0';
-                setTimeout(() => {
-                    loader.style.display = 'none';
-                }, 500); // รอ animation opacity จบ
-            }, 1500); // หน่วงเวลาเพิ่มเล็กน้อยเพื่อให้ UX ดูนุ่มนวล
-        }
-    </script>
-
+    <iframe src="https://script.google.com/macros/s/AKfycbxq0BU6K8-UigvuVFuciIrr4yzm_H93Tb7HyfvnTvakCWDlgcnEb6QtDBMPvv7mMzohMQ/exec"></iframe>
 </body>
-</html>
