Update title and iframe source in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GAAD Score with Ai โรงพยาบาลมะเร็งอุบลราชธานี</title>
+    <title>ตรวจตราอัคคีภัย โรงพยาบาลมะเร็งอุบลราชธานี</title>
     <style>
         body, html {
             margin: 0;
@@ -21,5 +21,5 @@
     </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbxq0BU6K8-UigvuVFuciIrr4yzm_H93Tb7HyfvnTvakCWDlgcnEb6QtDBMPvv7mMzohMQ/exec"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbz7UChYuR4PguAO6XC6SLU0nzBfu79qTEQfxNr09bx3bhrut5wmk3fS44ul-5N0Xugx/exec"></iframe>
 </body>
